--- a/_data/lecture_severless_applikationer.yml
+++ b/_data/lecture_severless_applikationer.yml
@@ -1,7 +1,7 @@
 ---
 contentTimeTotal:
   literatureTime: 118
-  optionalLiteratureTime: 163
+  optionalLiteratureTime: 171
 notInTopic:
   literature:
   - title: "Understanding Serverless Computing for the Beginner"
@@ -115,7 +115,7 @@ notInTopic:
 topics:
   - topic: "Azure functions"
     literatureTime: 93
-    optionalLiteratureTime: 39
+    optionalLiteratureTime: 47
     description-include: azure_functions.md
     literature:
     - title: "Intro to Azure Functions - What they are and how to create and deploy them"
@@ -210,6 +210,13 @@ topics:
       description: >
         Jeff Hollan joins Scott Hanselman to show how you can build highly scalable serverless APIs with Azure Functions.
     optionalLiterature:
+    - title: "Quickstart: Create your first C# function in Azure using Visual Studio"
+      url: https://docs.microsoft.com/en-us/azure/azure-functions/functions-create-your-first-function-visual-studio?tabs=in-process#prerequisites
+      timeType: Article
+      timeMinutes: 8
+      timeBadge: info
+      description: >
+        In this quickstart, you learn how to use Visual Studio to create and publish a C# HTTP triggered function to Azure Functions that runs on .NET Core 3.1.
     - title: "How to validate request for Azure Functions"
       url: https://tsuyoshiushio.medium.com/how-to-validate-request-for-azure-functions-e6488c028a41
       description: >
